--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
 buildscript {
     ext {
         compose_ui_version = '1.1.1'
+        daggerHiltAndroid = '2.42'
+    }
+
+
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$daggerHiltAndroid"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
